--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/65f76cf6ae.js" crossorigin="anonymous"></script>
-    <link rel="StyleSheet" href="public/css/normalize.css"/>
-    <link rel="stylesheet" href="public/css/style_menu.css">
-    <title>La note enchantée</title>
-</head>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+        <link rel="StyleSheet" href="./public/css/normalize.css" />
+        <link rel="styleSheet" href="./public/css/style_menu.css">
+        <script src="https://kit.fontawesome.com/65f76cf6ae.js" crossorigin="anonymous"></script>
+        <title>La note enchantée</title>
+    </head>
     <body>
         <header id="header">
-            <a href= "index.html"><i class="fas fa-arrow-left"></i> </a>
-            <h1>Ohmyfood</h1>
+            <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <h1>ohmyfood</h1>
         </header>
         <main>
             <article class="menu">
-                <figure><img class="menu__image" src="public/img/restaurants/la_note_enchantee.jpg" alt="Photo La note enchantée"></figure>
+                <figure><img  class="menu__background--alt" src="./public/img/restaurants/la_note_enchantee.jpg" alt="Photo La note enchantée"></figure>
                 <section class="menu__body">
                     <header class="card__header">
                         <h2>La note enchantée</h2>
@@ -26,7 +25,7 @@
                                 <i class="fa-stack-1x fas fa-heart"></i>
                             </span>
                         </div>   
-                    </header>
+                    </header>                 
                     <section class="entrees">                
                         <h3>Entrées</h3>                    
                         <div class="btn">
@@ -53,9 +52,9 @@
                                     <p class="btn__body__name--label">Sur blini à la farine de blé noir</p>
                                 </div>
                                 <div class="btn__body__price">       
-                                        <p><strong>35€</strong></p>                            
-                                    </div>
+                                    <p><strong>35€</strong></p>                            
                                 </div>
+                            </div>
                         </div>
                         <div class="btn">
                             <div class="btn__body">
@@ -63,7 +62,7 @@
                                     <i class="fas fa-check-circle"></i>     
                                 </div>
                                 <div class="btn__body__name">
-                                    <h4>Homard et espuma de topinambour</h4>
+                                    <h4>Homard et espuma de potiron</h4>
                                     <p class="btn__body__name--label">Mariné aux zestes d'orange</p>
                                 </div>
                                 <div class="btn__body__price">       
@@ -94,7 +93,7 @@
                                     <i class="fas fa-check-circle"></i>     
                                 </div>
                                 <div class="btn__body__name">
-                                    <h4>Noix de coquilles de Saint-Jacques</h4>
+                                    <h4>Noix de coquilles Saint-Jacques</h4>
                                     <p class="btn__body__name--label">Sur lit de purée de céleri-rave</p>
                                 </div>
                                 <div class="btn__body__price">       
@@ -122,7 +121,7 @@
                                     <i class="fas fa-check-circle"></i>     
                                 </div>
                                 <div class="btn__body__name">
-                                    <h4>Mijotée de queue de boeuf</h4>
+                                    <h4>Mijoté de queue de boeuf</h4>
                                     <p class="btn__body__name--label">Et riz sauvage aux zestes de citron</p>
                                 </div>
                                 <div class="btn__body__price">       
@@ -168,7 +167,7 @@
                                 </div>
                                 <div class="btn__body__name">
                                     <h4>Tarte au citron meringuée</h4>
-                                    <p class="btn__body__name--label">Destructurée</p>
+                                    <p class="btn__body__name--label">Déstructurée</p>
                                 </div>
                                 <div class="btn__body__price">       
                                     <p><strong>23€</strong></p>                            
@@ -176,12 +175,12 @@
                             </div>
                         </div>
                     </section>                    
-                    <div class="orderBtn"><a href="#">Commander</a></div> 
-                </section>
+                <div class="orderBtn"><a href="#">Commander</a></div>        
+                </section>                  
             </article>
         </main>
         <footer>
-            <img src="./public/img/logo/ohmyfood@2x.svg" alt="Logo Oh my food" />
+            <img src="./public/img/logo/ohmyfood@2x.svg" alt="logo_ohmyfood" />
             <nav>
                 <ul>
                     <li><a href="#"><i class="icon fas fa-utensils"></i>Proposer un restaurant</a></li>
